--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebase-rest-firestore",
+  "name": "@cougargrades/firebase-rest-firestore",
   "version": "1.5.0",
   "description": "Firebase Firestore REST API client for Edge runtime environments",
   "main": "dist/cjs/index.js",
